Проверка сборки под Windows 10 и добавлено слово.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    //Добвил чтобы заткнут ошибку
+    "ignoreDeprecations": "5.0",
     "moduleResolution": "node",
     "target": "esnext",
     "module": "esnext",
